[package]
name = "krab-kart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.8"
rand = "0.8.5"
sdl2 =  { version = "0.35.2", features = [ "ttf" ] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release.package."*"]
opt-level = 3
